[gd_scene load_steps=3 format=3 uid="uid://b3qxv4y8w1s2m"]

[ext_resource type="Script" path="res://game/ui/CharacterSelection.gd" id="1_2h8vw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2h8vw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sélection du Personnage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterSlots" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="CharacterInfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CharacterInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="CharacterName" type="Label" parent="VBoxContainer/CharacterInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Nom du Personnage"
horizontal_alignment = 1

[node name="CharacterClass" type="Label" parent="VBoxContainer/CharacterInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Classe"
horizontal_alignment = 1

[node name="CharacterLevel" type="Label" parent="VBoxContainer/CharacterInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Niveau"
horizontal_alignment = 1

[node name="CharacterStats" type="Label" parent="VBoxContainer/CharacterInfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Stats"
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Jouer"
disabled = true

[node name="CreateButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Créer"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Supprimer"
disabled = true

[node name="CreateCharacterPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="CreateCharacterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
text = "Créer un Personnage"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
text = "Nom:"

[node name="NameInput" type="LineEdit" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Nom du personnage (3-20 caractères)"

[node name="ClassLabel" type="Label" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
text = "Classe:"

[node name="ClassButtons" type="HBoxContainer" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonContainer" type="HBoxContainer" parent="CreateCharacterPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CreateConfirmButton" type="Button" parent="CreateCharacterPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Créer"
disabled = true

[node name="CreateCancelButton" type="Button" parent="CreateCharacterPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Annuler" 